fix scrollbar window

--- a/src/Components/GlobalStyles/GlobalStyles.scss
+++ b/src/Components/GlobalStyles/GlobalStyles.scss
@@ -39,7 +39,6 @@ html ::-webkit-scrollbar {
 }
 html ::-webkit-scrollbar-thumb {
     background-color: rgba(22,24,35,.06);
-    background-color: var(--background-gray-color-06);
     border-radius: 4px;
 }
 
